feat(implementation): adjust description for paper usage

--- a/notebooks/chess_ai.ipynb
+++ b/notebooks/chess_ai.ipynb
@@ -84,9 +84,10 @@
     "- `is_timeout` ist genau dann wahr, wenn die Zeit des Schachcomputers abgelaufen ist.\n",
     "- Bei `move_scores` handelt es sich um ein Dictionary, dass den Score für jeden bereits besuchten Zug im Iterative Deepening Verfahren speichert.\n",
     "Dabei handelt es sich speziell um ein verschachteltes Dictionary.\n",
-    "Die Schlüssel auf der obersten Ebene bilden die Stellungen in \\ac{FEN}.\n",
+    "Die Schlüssel auf der obersten Ebene bilden die Stellungen in Forsyth–Edwards Notation (FEN).\n",
     "Der dazugehörige Wert ist wiederum ein Dictionary mit den Zügen als Schlüssel und dem dazugehörigen Score als Wert.\n",
     "- `piece_zobrist_values` ist eine Liste von Listen, wobei die inneren Listen jeweils ein Feld repräsentieren und ihrerseits für jede einzelne Figur einen eindeutigen Zobrist Hash beinhalten.\n",
+    "- `repetiton_table` speichert Stellungen um zu überprüfen, ob eine Stellung bereits zwei mal vorgekommen ist.\n",
     "- In der Variablen `start_time` wird die Startzeit des Zuges des Schachcomputers abgelegt.\n",
     "- `transposition_table` ist ein LRU Cache mit der maximalen Größe `TABLE_SIZE` und bildet damit die Transpositionstabellen ab.\n",
     "- `zobrist_turn` ist ein Hash, welcher mit dem Zobrist Hash XOR verrechnet wird, falls die ziehende Person wechselt."
@@ -110,6 +111,7 @@
     "is_timeout = False\n",
     "move_scores = defaultdict(dict)\n",
     "piece_zobrist_values = []\n",
+    "repetition_table = {}\n",
     "start_time = 0.0\n",
     "transposition_table = None\n",
     "zobrist_turn = 0"
@@ -591,7 +593,7 @@
    "metadata": {},
    "source": [
     "Für die spätere Implementierung der Transpositionstabellen wird ein LRU Cache implementiert repräsentiert durch die Klasse `LRUCache`.\n",
-    "Eine detaillierte Beschreibung der Implementierung ist in Kapitel~\\ref{ch:transpositional-tables} zu finden."
+    "Eine detaillierte Beschreibung der Implementierung ist in Kapitel 2.3.3 zu finden."
    ]
   },
   {
@@ -687,6 +689,8 @@
     "        endgame = True\n",
     "\n",
     "    zobrist = zobrist_hash(board)\n",
+    "    increment_repetiton_table(zobrist)\n",
+    "    \n",
     "    if board.legal_moves == 1:\n",
     "        return board.legal_moves[0]\n",
     "\n",
@@ -715,6 +719,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Die Funktion `check_triple_repetition` überprüft, ob die aktuelle Begegnung mit einer Stellung, die dritte ist. In diesem Fall wird `True` zurückgegeben. Ansonsten wird `False` zurückgegben. Als Argument bekommt die Funktion den Zobrist Hash der aktuellen Stellung.\n",
+    "Die Funktion ist notwendig, weil die von *python-chess* definierte Funktion `board.can_claim_threefold_repetition()` immer den gesamten Move-Stack aufrollt, um Wiederholungen zu erkennen und somit sehr ineffizient ist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def check_triple_repetition(zobrist_hash):\n",
+    "    global repetition_table\n",
+    "    if  zobrist_hash in repetition_table:\n",
+    "        times_encountered = repetition_table[zobrist_hash]\n",
+    "        if times_encountered > 2:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`increment_repetition_table` wird verwendet um den Eintrag mit dem Schlüssel `zobrist_hash` im Dictionary um eins zu erhöhen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def increment_repetiton_table(zobrist_hash: int):\n",
+    "    if  zobrist_hash in repetition_table:\n",
+    "        times_encountered = repetition_table[zobrist_hash]\n",
+    "        times_encountered = times_encountered + 1\n",
+    "        repetition_table[zobrist_hash] = times_encountered\n",
+    "    else:\n",
+    "        repetition_table[zobrist_hash] = 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`decrement_repetition_table` wird verwendet um den Eintrag mit dem Schlüssel `zobrist_hash` im Dictionary um eins zu vermindern. Falls der Wert für `times_encountered` eins sein sollte, wird der Eintrag aus dem Dictionary gelöscht."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decrement_repetition_table(zobrist_hash: int):\n",
+    "    times_encountered = repetition_table[zobrist_hash]\n",
+    "    if times_encountered == 1:\n",
+    "        del repetition_table[zobrist_hash]\n",
+    "    else:\n",
+    "        times_encountered = times_encountered - 1\n",
+    "        repetition_table[zobrist_hash] = times_encountered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Die Funktion `check_endgame` überprüft ob sich eine Stellung im Endspiel befindet. Dafür bekommt die Funktion eine Stellung (`board`) als Parameter. Anschließend wird über die Felder des Bretts iteriert und alle Figuren bis auf Bauern und Könige gezählt. Sobald der Zähler für die Figuren (`counter`) größer als 4 ist, ist sicher, dass sich das Spiel nicht im Endspiel befindet und es wird `False` zurückgegeben. Sollte der Zähler nach durchlaufen der Schleife immer noch kleiner als 4 sein, so befindet sich das Spiel im Endspiel und es wird `True` zurückgegeben."
    ]
   },
@@ -724,7 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_endgame(board: chess.Board):\n",
+    "def check_endgame(board: chess.Board) -> bool:\n",
     "    counter = 0\n",
     "    for square in range(64):\n",
     "        piece = board.piece_at(square)\n",
@@ -798,12 +873,13 @@
     "    if time.time() - start_time > TIMEOUT_SECONDS:\n",
     "        is_timeout = True\n",
     "        return alpha\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    if board.is_checkmate():\n",
     "        return -sys.maxsize\n",
     "    if board.is_stalemate():\n",
     "        return 0\n",
-    "    if board.can_claim_threefold_repetition():\n",
+    "    if check_triple_repetition(zobrist):\n",
     "        return 0\n",
     "\n",
     "    if (zobrist, depth) in transposition_table:\n",
@@ -826,9 +902,11 @@
     "\n",
     "    for move in moves:\n",
     "        new_zobrist = zobrist_move(board, move, zobrist)\n",
+    "        increment_repetiton_table(new_zobrist)\n",
     "        board.push(move)\n",
     "        move_score = minimize(board, depth - 1, score, beta, color, new_zobrist)\n",
     "        move_scores[board.fen()][move] = move_score\n",
+    "        decrement_repetition_table(new_zobrist)\n",
     "        board.pop()\n",
     "\n",
     "        if move_score > score:\n",
@@ -885,7 +963,7 @@
     "        return sys.maxsize\n",
     "    if board.is_stalemate():\n",
     "        return 0\n",
-    "    if board.can_claim_threefold_repetition():\n",
+    "    if check_triple_repetition(zobrist):\n",
     "        return 0\n",
     "    \n",
     "    if (zobrist, depth) in transposition_table:\n",
@@ -908,9 +986,11 @@
     "\n",
     "    for move in moves:\n",
     "        new_zobrist = zobrist_move(board, move, zobrist)\n",
+    "        increment_repetiton_table(new_zobrist)\n",
     "        board.push(move)\n",
     "        move_score = maximize(board, depth - 1, alpha, score, color, new_zobrist)\n",
     "        move_scores[board.fen()][move] = move_score\n",
+    "        decrement_repetition_table(new_zobrist)\n",
     "        board.pop()\n",
     "\n",
     "        if move_score < score:\n",
@@ -1261,8 +1341,7 @@
     "    try:\n",
     "        while not board.is_game_over(claim_draw=True):\n",
     "            if board.turn == chess.WHITE:\n",
-    "                #move = board.parse_uci(human_player(board))\n",
-    "                move = ai_player(board, chess.WHITE)\n",
+    "                move = board.parse_uci(human_player(board))\n",
     "            else:\n",
     "                move = ai_player(board, chess.BLACK)\n",
     "                \n",
