feat(paper): finalize paper

--- a/paper/content/chapter3.tex
+++ b/paper/content/chapter3.tex
@@ -1,4 +1,5 @@
 % !TeX root = ../paper.tex
-\section{Implementierung} \label{ch:implementation}
+\section{Umsetzung} \label{ch:implementation}
 
 \input{content/chapter3/chapter3_1.tex}
+\input{content/chapter3/chapter3_2.tex}
